solc_mutator_ossfuzz_seed_corpus/test_sol/test_9b81d043e14bd5d88fcf15045b4d527bce00668007f7eba32b7374b3b8b22216_5e19fae884ede5bf35314e44d560adea881531b6_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0(function (int136) internal   i0,function (bytes13, uint24) internal   returns (function (uint168, int168) external   returns (int232, int232, bool[1] memory)) i1) internal    returns(function (int192, uint56, function () internal   returns (int168[2] memory, int208, bytes memory)) external   returns (function (bool, bytes12) internal   returns (string memory)[2] memory, uint16) o0)
  {
  }
  function f1(bytes3 i0) external    returns(int256[][] memory o0,bytes15 o1)
  {
  }
  using L0 for *;
  error er0(bytes ep0);
}
struct St0 {
  bytes4 el0;
}
using L0 for uint;
using L0 for uint;
using L0 for uint;
contract C0 {
  fallback() external virtual  
  {
  }
  using L0 for *;
  using L0 for *;
  address  public s0 = address(this);
  int200   s1;
  int232  public s2;
  bytes25   s3;
  constructor(int200 i0,int232 i1,bytes25 i2) payable  {
    s1 &= int200(0);
    s2 += ((int136(43556142965880123323311949751266331066367) ** uint136(uint136(87112285931760246646623899502532662132735))) * int232(-254610436539958139557607640738269246178980428631694139538261215159735));
    s3 ^= bytes18(0x000000000000000000000000000000000000);
    {
      (bool l0, bytes memory l1) = address(this).call(bytes("00ffffffffffffffffffffffffffffffffffffffffffff"));
      if (true)
      {
      }
    }
  }
}
pragma solidity >= 0.0.0;
type T0 is bytes20;
// ----
// TypeError 2582: (su0.sol:236-308): Internal type cannot be used for external function type.
